--- a/public/html/myvote.html
+++ b/public/html/myvote.html
@@ -1,58 +1,4 @@
-<!DOCTYPE html>
-<html ng-app="voteApp"lang='en'>
-<head>
-	 <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <title>myVote</title>
-     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-     <link rel="stylesheet" href="css/myvote.css">
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.min.js" type="text/javascript"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular-animate.js" type="text/javascript"></script>
-</head>
 
-<body ng-controller="mainController" id= "slides_control">
-<!-- <div class="sitecontainer"> -->
-	<div class="container-fluid">
-
-
-<!-- Navbar -->
-	<div>
-		<nav class="navbar navbar-inverse">
-  			<div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    		<div class="navbar-header">
-     		 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-       	 		<span class="sr-only">Toggle navigation</span>
-        		<span class="icon-bar"></span>
-        		<span class="icon-bar"></span>
-        		<span class="icon-bar"></span>
-      			</button>
-      			<a class="navbar-brand" href="#">myVote</a>
-    		</div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      		<ul class="nav navbar-nav">
-      		</ul>
-      		<ul class="nav navbar-nav navbar-right">
-        		<li><a href="#">Link</a></li>
-        		<li class="dropdown">
-          			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Create A Ballot <span class="caret"></span></a>
-          		<ul class="dropdown-menu">
-            	<li><a href="\ballot" ng-click="flip()">New</a></li>
-            	<li><a href="#">View Created Ballot</a></li>
-<!--             	<li><a href="#">Something else here</a></li>
-            	<li role="separator" class="divider"></li>
-            	<li><a href="#">Separated link</a></li> -->
-          		</ul>
-        		</li>
-      		</ul>
-    		</div><!-- /.navbar-collapse -->
-  			</div><!-- /.container-fluid -->
-		</nav>
-	</div>
 
 	<div>
 		<h4>Cast your vote from anywhere.</h4>
@@ -61,9 +7,10 @@
 
 <!-- carousel -->
 
+
 	<div>
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-	  <!-- Indicators -->
+	  <!-- <!Indicators -->
 	  <ol class="carousel-indicators">
 	    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 	    <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -71,10 +18,10 @@
 	    <li data-target="#myCarousel" data-slide-to="3"></li>
 	  </ol>
 
-	  <!-- Wrapper for slides -->
+	  <!-- <!<! Wrapper for slides -->
 	  <div class="carousel-inner" role="listbox">
 	    <div class="item active">
-	      <img src="http://i.bnet.com/blogs/woman-using-mobile-phone-stock-800px.png" alt="Girl Phone">
+	      <img class="picture-size" src="http://i.bnet.com/blogs/woman-using-mobile-phone-stock-800px.png" alt="Girl Phone">
 	    </div>
 
 	    <div class="item">
@@ -91,17 +38,25 @@
 	  </div>
 
 	  <!-- Left and right controls -->
-	  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+	  <div class="left carousel-control" role="button" data-target="#myCarousel" data-slide="prev">
 	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 	    <span class="sr-only">Previous</span>
-	  </a>
-	  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+	  </div>
+	  <div class="right carousel-control" role="button" data-target="#myCarousel" data-slide="next">
 	    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 	    <span class="sr-only">Next</span>
-	  </a>
+	  </div>
 	</div>
 
-	</div>
+  <script type='text/javascript'>
+    $(document).ready(function() {
+         $('.carousel').carousel({
+             interval: 4000
+         })
+    });    
+</script>
+
+	</div> 
 
 
 <!-- Model -->
@@ -128,42 +83,25 @@
             </div>
             <div class="form-group">
               <label for="psw"><span class="glyphicon glyphicon-eye-open"></span> Access Code</label>
-              <input type="text" class="form-control" id="psw" placeholder="Enter password">
+              <input type="text" class="form-control" id="psw" placeholder="Enter Access Code">
             </div>
             <div class="checkbox">
               <label><input type="checkbox" value="" checked>Remember me</label>
             </div>
-              <button ng-click="flip()" type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Login</button>
+              <button ng-click="isLoggedIn()" href="" type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"></span> Login</button>
           </form>
         </div>
         <div class="modal-footer">
           <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
-<!--           <p>Not a member? <a href="#">Sign Up</a></p>
-          <p>Forgot <a href="#">Password?</a></p> -->
+          <p>Not a member? <a href="javascript:void(0)">Sign Up</a></p>
+          <p>Forgot <a href="javascript:void(0)">Password?</a></p>
         </div>
       </div>
-      
+      </div>
+      </div>
+    
     </div>
-  </div> 
-</div>
+
+
+
  
-
-
-
-
-
-
-
-
-
-
-
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.4/ui-bootstrap-tpls.js"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-
-
-
-</div>	
-</body>
-</html>
