--- a/public/html/myvote.html
+++ b/public/html/myvote.html
@@ -63,7 +63,7 @@
 
 <div class="container">
   <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-default btn-lg" id="myBtn">Login</button>
+  <button type="button" class="btn btn-default btn-lg" id="myBtn">Secure Ballot Login</button>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
