--- a/public/html/results.html
+++ b/public/html/results.html
@@ -6,7 +6,7 @@
 
 		<canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="labels"></canvas>
 
-		<canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels"></canvas> 
+<!-- 		<canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels"></canvas>  -->
 	
 
 
