--- a/public/html/index.html
+++ b/public/html/index.html
@@ -42,7 +42,7 @@
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 
-	    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    		<div id="bs-example-navbar-collapse-1">
 	      		<ul class="nav navbar-nav">
 	      		</ul>
 	      		<ul class="nav navbar-nav navbar-right">
@@ -56,7 +56,7 @@
 	            </ul>	
 
 
-	    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    		<div id="bs-example-navbar-collapse-1">
 	      		<ul class="nav navbar-nav">
 	      		</ul>
 	      		<ul class="nav navbar-nav navbar-right">
@@ -89,10 +89,8 @@
 	</div>
 	<script src="js/main.js" type="text/javascript"></script>
 
-	<footer>
 		
-	</footer>
+<footer class="site-footer">
 
-
-	</body>
+</footer>
 </html>
