--- a/public/html/myvote.html
+++ b/public/html/myvote.html
@@ -8,7 +8,7 @@
 <!-- carousel -->
 
 
-	<div>
+	<div class="picture-size">
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
 	  <!-- <!Indicators -->
 	  <ol class="carousel-indicators">
